# AIRecruiter

./: CHANGES.md  CONTRIBUTING.md  LICENSE  README.md  SETUP_INSTRUCTIONS.md  TEST_README.md  add_sample_candidates.py  add_sample_job.py  add_test_data.py  app.py  app.py.orig  backup_project.py  cookies.txt  create_admin.py  download.html  fix_render_orm.py  load_env.py  main.py  migrations.py  models.py  project_code.html  promote_to_senior.py  pyproject.toml  render.yaml  render_fix_db.py  requirements.txt  reset_password.py  run_all_tests.sh  test_openai_integration.py  test_phone_matching.py  test_resume_system.py  test_system_e2e.py  user_management.html
static/: styles.css
static/js/: main.js
static/uploads/: john_doe_1745471158.txt
templates/: base.html  candidate_apply.html  candidate_detail.html  candidate_matches.html  candidates.html  dashboard.html  jobs.html  recruiter_login.html  role_management.html  user_management.html
utils/: embedding_service.py  job_expiration_service.py  matching_engine.py  role_manager.py  roles.py
